--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@ main{
     top: 211px;
 
 }
+/* logos style  */
 .logos{
     display: flex;
     position: absolute;
@@ -70,4 +71,34 @@ main{
     padding-bottom: 30px;
     font-size: 30px;
     color: #E02C6D;
+}
+/* --------------
+    Products style
+------------- */
+.product .product-banner img{
+    width: 300px;
+    height: 256px;
+}
+.fa-star.filled{
+color: #FB8200;
+}
+.fa-star.empy{
+  color: #AEAEAE;
+}
+.product-text{
+    position: absolute;
+height: 61px;
+left: 210px;
+right: 1034px;
+bottom: 1812px;
+
+font-family: Inter;
+font-style: normal;
+font-weight: bold;
+font-size: 14px;
+line-height: 143%;
+display: flex;
+align-items: center;
+letter-spacing: 0.018em;
+color: #787885;;
 }
