--- a/styles/style.css
+++ b/styles/style.css
@@ -1,104 +1,164 @@
 body{
-    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    font-family: sans-serif;
+    background: #f2f2f2;
 }
 h2{
-     position: absolute;
-     left: 8.33%;
+    margin-left: 100px;
 }
-h1{
-    font-size: 50px;
+.Paragraph{
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
 }
-main{
+.part-1{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.container{
-     position: absolute;
-    width: 1047px;
-    height: 1662px;
-    left: 196px;
-    top: 935px;
-
-}
-.section-1{
-    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 100px;
 }
 .div-1{
-    display:flex;
-}
-.influencer{
-    position: absolute;
-    width: 582px;
-    height: 270px;
-    left: 120px;
-    top: 285px;
+    display: flex;
 }
 .link-button{
-    text-decoration: none;
     background-color: #E02C6D;
     padding: 10px 40px;
+    margin-top: 15px;
     border-radius: 5px;
-    color: white;
+    color: blanchedalmond;
     font-weight: bold;
 }
-.fa-arrow{
-   padding-left: 15px;
-}
-.div-2{
-    position: absolute;
-    width: 440px;
-    height: 414px;
-    left: 835px;
-    top: 211px;
 
-}
 /* logos style  */
 .logos{
-    display: flex;
-    position: absolute;
-    width: 1110px;
-    height: 110px;
-    left: 165px;
-    top: 725px;
+    padding-left: 100px;
+    padding-top: 100px;
 }
 .logos-size{
-    padding: 15px;
-    margin: 15px;
+    padding: 20px;
+    margin: 20px;
+
 }
-.section-title{
-    text-align: center;
-    padding-bottom: 30px;
-    font-size: 30px;
-    color: #E02C6D;
-}
+
 /* --------------
     Products style
 ------------- */
-.product .product-banner img{
-    width: 300px;
-    height: 256px;
-}
-.fa-star.filled{
-color: #FB8200;
-}
-.fa-star.empy{
-  color: #AEAEAE;
-}
-.product-text{
-    position: absolute;
-height: 61px;
-left: 210px;
-right: 1034px;
-bottom: 1812px;
 
-font-family: Inter;
-font-style: normal;
-font-weight: bold;
-font-size: 14px;
-line-height: 143%;
-display: flex;
-align-items: center;
-letter-spacing: 0.018em;
-color: #787885;;
+a{
+    text-decoration: none;
+}
+.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0;
+    padding-top: 100px;
+    
+}
+.content{
+    width: 20%;
+    margin: 15px;
+    box-sizing: border-box;
+    float: left;
+    text-align: center;
+    border-radius: 20px;
+    cursor: pointer;
+    padding-top: 10px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    transition:2s;
+    background: #f2f2f2;
+}
+.content:hover{
+    box-shadow: 0 2px 6px rgba(0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  transform: translate(0px, -8px);
+}
+.img{
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+}
+.img-style{
+    width: 250px;
+    height: 250px;
+    border-radius: 20px;
+}
+p{
+    text-align: center;
+    color: #b2bec3;
+    padding-top: 0 8px;
+}
+h6{
+    font-size: 26px;
+    text-align: center;
+    color: #222f3e;
+    margin: 0;
+}
+.ul{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 0;
+    text-decoration: none;
+}
+.li{
+    padding-top: 5px;
+}
+
+.fa{
+    font-size: 20;
+    transition: 4s;
+    display: flex;
+    text-decoration: none;
+}
+.checked{
+    color: #ff9f43;
+}
+.fa:hover{
+    transform: scale(1.3);
+    transition: 6s;
+}
+button{
+    text-align: center;
+    font-size: 24px;
+    color: #fff;
+    width: 100%;
+    padding: 15px;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    margin-top: 5px;border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+.buy-1{
+    background:#2183a2 ;
+}
+.buy-2{
+    background:  #3b3e6e;
+}
+.buy-3{
+    background: #ff9f43;
+}
+.buy-4{
+    background:  #3b3e34;
+}
+.buy-5{
+    background: tomato;
+}
+.buy-6{
+    background: violet;
+}
+.buy-7{
+    background: yellowgreen;
+}
+.buy-8{
+    background: chocolate;
+}
+@media (max-width:750px) {
+    .content{
+        width: 100%;
+    }
 }
