--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,12 @@ body{
 h2{
     margin-left: 100px;
 }
+h3{
+    text-align: center;
+    font-size: 30px;
+    margin: 0;
+    padding-top: 10px;
+}
 .Paragraph{
     color: black;
     font-weight: bold;
@@ -109,17 +115,17 @@ h6{
 }
 
 .fa{
-    font-size: 20;
-    transition: 4s;
-    display: flex;
-    text-decoration: none;
+    font-size: 20px;
+    transition: .4s;
+
+  
 }
 .checked{
     color: #ff9f43;
 }
 .fa:hover{
     transform: scale(1.3);
-    transition: 6s;
+    transition: .4s;
 }
 button{
     text-align: center;
@@ -130,7 +136,8 @@ button{
     border: 0;
     outline: none;
     cursor: pointer;
-    margin-top: 5px;border-bottom-right-radius: 20px;
+    margin-top: 5px;
+    border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
 }
 .buy-1{
@@ -157,7 +164,14 @@ button{
 .buy-8{
     background: chocolate;
 }
+@media (max-width:1000px) {
+
+    .content{
+        width: 30%;
+    }
+}
 @media (max-width:750px) {
+
     .content{
         width: 100%;
     }
