--- a/styles/style.css
+++ b/styles/style.css
@@ -170,7 +170,9 @@ button{
     background-color: black;
     color: cornsilk;
     text-align: center;
-  height: 200px;
+    height: 200px;
+    border-radius: 5px;
+    margin: 10px;
 }
 @media (max-width:1000px) {
 
